--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -12,6 +12,11 @@
       integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
       crossorigin="anonymous"
     />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
   <body>
     <div class="wrapper">
@@ -21,13 +26,28 @@
             <h1>G<span>J</span></h1>
           </div>
           <ul class="menu">
-            <li><a href="#">Home</a></li>
+            <li><a class="active" href="#">Home</a></li>
             <li><a href="#">About me</a></li>
             <li><a href="#">Portfolio</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
         </nav>
       </header>
+
+      <main class="main">
+        <div class="info-content">
+          <h1>I'm Guido <span>Juliano</span></h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
+            nostrum suscipit iusto expedita aspernatur reiciendis veritatis
+            perspiciatis exercitationem id ea ex harum eos, accusantium possimus
+            accusamus deleniti tempore aliquid cumque?
+          </p>
+          <a download="" href="#">
+            <button>Download CV</button>
+          </a>
+        </div>
+      </main>
     </div>
   </body>
 </html>
