--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -12,7 +12,10 @@
       integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
       crossorigin="anonymous"
     />
-
+    <script
+      src="https://kit.fontawesome.com/50e9b1b119.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -37,17 +40,17 @@
       <main class="main">
         <div class="info-content">
           <h1>I'm Guido <span>Juliano</span></h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
-            nostrum suscipit iusto expedita aspernatur reiciendis veritatis
-            perspiciatis exercitationem id ea ex harum eos, accusantium possimus
-            accusamus deleniti tempore aliquid cumque?
-          </p>
+          <p>Web developer, electronic technical and student</p>
           <a download="" href="#">
-            <button>Download CV</button>
+            <button class="download-cv">Download CV</button>
           </a>
+        </div>
+        <div class="logo animate__animated animate__pulse animate__infinite">
+          <h1>G<span>J</span></h1>
         </div>
       </main>
     </div>
+
+    <div class="about"></div>
   </body>
 </html>
