--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>portfolio</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link
       rel="stylesheet"
@@ -20,10 +20,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+
+    <script src="https://unpkg.com/scrollreveal"></script>
   </head>
   <body>
     <div class="wrapper">
-      <header>
+      <header class="header">
         <nav class="navbar">
           <div class="brand">
             <h1>G<span>J</span></h1>
@@ -40,8 +42,8 @@
       <main class="main">
         <div class="info-content">
           <h1>I'm Guido <span>Juliano</span></h1>
-          <p>Web developer, electronic technical and student</p>
-          <a download="" href="#">
+          <p>Web developer, electronic technical and student.</p>
+          <a href="/Portfolio/archivos/CV_MAZZUCHINI.pdf" download>
             <button class="download-cv">Download CV</button>
           </a>
         </div>
@@ -50,7 +52,88 @@
         </div>
       </main>
     </div>
+    <div class="about">
+      <img class="image-profile" src="./img/fotoperfil.jpg" alt="foto_perfil" />
+      <div class="about-info">
+        <h2 class="about-me">About me</h2>
+        <div class="divider"></div>
+        <p class="p1">
+          I'm Guido Juliano i have 28 years old, I'm living in Resistencia,
+          Chaco. I'm studing engineering of systems in UTN and at this moment
+          working in the Ministry of Education like full stack developer.
+        </p>
+        <p class="p2">
+          Now we are working with Python, HTML, CSS, JavaScript, Django,
+          Postgres, containers of Docker and repositories and versioned whit
+          Github. I consider myself a person who adapts very quickly in the
+          workplace, I am quite self-taught and I like to work in a team.
+        </p>
+      </div>
+    </div>
+    <div class="portfolio">
+      <div class="portfolio-headings">
+        <h2>My Portfolio</h2>
+        <div class="divider"></div>
+      </div>
 
-    <div class="about"></div>
+      <div class="container">
+        <div class="card">
+          <div class="card__img">
+            <video src="/Portfolio/img/ecoblog.mp4" autoplay loop muted></video>
+          </div>
+          <div class="card__title">
+            <h2>Ecoblog</h2>
+          </div>
+          <div class="card__projects-links">
+            <a
+              href="https://github.com/guidojuliano/RepositorioEcoBlog"
+              target="_blank"
+            >
+              <i class="fa-brands fa-github"></i>
+            </a>
+            <a
+              href="https://www.youtube.com/watch?v=oHKKnqnNNqk&t=11s"
+              target="_blank"
+            >
+              <i class="fa-brands fa-youtube"></i>
+            </a>
+          </div>
+          <div class="project-details-content">
+            <button class="project-details download-cv">Project Details</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="contact-section">
+      <div class="contact-headings">
+        <h2>Contact</h2>
+        <div class="divider"></div>
+      </div>
+
+      <div class="container-contact">
+        <div class="logo2">
+          <h1>G<span>J</span></h1>
+        </div>
+        <form class="form-contact">
+          <input type="text" placeholder="Name" />
+          <input type="email" placeholder="Email" />
+          <textarea placeholder="Place your message here..."> </textarea>
+          <button type="submit" class="btn-submit">Send message</button>
+        </form>
+      </div>
+    </div>
+
+    <script>
+      ScrollReveal().reveal(".header");
+      ScrollReveal().reveal(".info-content", { delay: 500 });
+      ScrollReveal().reveal(".logo", { delay: 1000 });
+      ScrollReveal().reveal(".image-profile");
+      ScrollReveal().reveal(".about-me", { delay: 500 });
+      ScrollReveal().reveal(".p1", { delay: 1000 });
+      ScrollReveal().reveal(".p2", { delay: 1500 });
+      ScrollReveal().reveal(".portfolio-headings", { delay: 500 });
+      ScrollReveal().reveal(".card", { delay: 1000 });
+    </script>
   </body>
 </html>
