--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <div class="about">
         <img
           class="image-profile"
-          src="./img/fotoperfil.jpg"
+          src="./img/fotoperfil2.jpg"
           alt="foto_perfil"
         />
         <div class="about-info">
