--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <h2 class="about-me">About me</h2>
           <div class="divider"></div>
           <p class="p1">
-            I'm Guido Juliano i have 28 years old, I'm living in Resistencia,
+            I'm Guido Juliano I have 28 years old, I'm living in Resistencia,
             Chaco. I'm studing Information Systems Engineering in UTN and at
             this moment working in the Ministry of Education as a full stack
             developer.
