--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
           <p class="p1">
             I'm Guido Juliano I have 28 years old, I'm living in Resistencia,
             Chaco. I'm studing Information Systems Engineering in UTN and at
-            this moment working in the Ministry of Education as a full stack
-            developer.
+            this moment working in the Ministry of Education as a Full Stack
+            Developer.
           </p>
           <p class="p2">
             Now we are working with Python, HTML, CSS, JavaScript, Django,
-            Postgres, containers of Docker and repositories and versioned whit
+            PostgreSQL, Docker containers, repositories and versioned whit
             Github. I consider myself a person who adapts very quickly in the
             workplace, I am quite self-taught and I like to work in a team.
           </p>
