--- a/index.html
+++ b/index.html
@@ -126,12 +126,7 @@
         <div class="container">
           <div class="card">
             <div class="card__img">
-              <video
-                src="/Portfolio/img/ecoblog.mp4"
-                autoplay
-                loop
-                muted
-              ></video>
+              <img src="./img/ecoblog.gif" />
             </div>
             <div class="card__title">
               <h2>Ecoblog</h2>
