--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <div class="info-content">
             <h1>I'm Guido <span>Juliano</span></h1>
             <p>Web developer, electronic technical and student.</p>
-            <a href="/Portfolio/archivos/CV_MAZZUCHINI.pdf" download>
+            <a href="./archivos/CV_MAZZUCHINI.pdf" download>
               <button class="download-cv">Download CV</button>
             </a>
           </div>
@@ -102,7 +102,7 @@
           <h2 class="about-me">About me</h2>
           <div class="divider"></div>
           <p class="p1">
-            I'm Guido Juliano I have 28 years old, I'm living in Resistencia,
+            I'm Guido Juliano and I'm 28 years old, I'm living in Resistencia,
             Chaco. I'm studing Information Systems Engineering in UTN and at
             this moment working in the Ministry of Education as a Full Stack
             Developer.
@@ -111,7 +111,7 @@
             Now we are working with Python, HTML, CSS, JavaScript, Django,
             PostgreSQL, Docker containers, repositories and versioned whit
             Github. I consider myself a person who adapts very quickly in the
-            workplace, I am quite self-taught and I like to work in a team.
+            workplace, I am self-taught and I like to work in a team.
           </p>
         </div>
       </div>
