--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
               </li>
             </ul>
           </nav>
+          <span class="btn-menu">
+            <i class="fa-solid fa-bars"></i>
+          </span>
         </header>
 
         <main class="main">
