--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <h1>G<span>J</span></h1>
           </div>
           <nav class="navbar">
-            <ul class="menu menu_item">
+            <ul class="menu menu_items">
               <li class="active menu_item" data-url="home">
                 <a href="#home">Home</a>
               </li>
@@ -68,7 +68,7 @@
                 <a href="#about">About me</a>
               </li>
               <li class="menu_item" data-url="portfolio">
-                <a href="#portfolio">Portfolio</a>
+                <a href="#portfolio">Projects</a>
               </li>
               <li class="menu_item" data-url="contact">
                 <a href="#contact">Contact</a>
@@ -122,7 +122,7 @@
     <section class="section" id="portfolio">
       <div class="portfolio">
         <div class="portfolio-headings">
-          <h2>My Portfolio</h2>
+          <h2>Projects</h2>
           <div class="divider"></div>
         </div>
 
