--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="css/modal.css" />
+
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
@@ -162,6 +162,31 @@
             </div>
             <div class="project-details-content">
               <button class="project-details download-cv">
+                Project Details
+              </button>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card__img">
+              <img src="./img/porfolio.gif" />
+            </div>
+            <div class="card__title">
+              <h2>Porfolio</h2>
+            </div>
+            <div class="card__projects-links">
+              <a
+                href="https://github.com/guidojuliano/portfolio"
+                target="_blank"
+              >
+                <i class="fa-brands fa-github"></i>
+              </a>
+            </div>
+            <div class="project-details-content">
+              <button
+                class="project-details download-cv"
+                href="https://github.com/guidojuliano/portfolio"
+                target="_blank"
+              >
                 Project Details
               </button>
             </div>
