--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
     <link rel="stylesheet" href="css/styles.css" />
-
+    <link rel="icon" href="./img/gj.jpeg" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
@@ -17,12 +17,14 @@
       src="https://kit.fontawesome.com/50e9b1b119.js"
       crossorigin="anonymous"
     ></script>
+    <!-- ANIMATIONS -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
 
     <script src="https://unpkg.com/scrollreveal"></script>
+    <!-- FORM CONTACT EMAIL -->
     <script
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
@@ -110,7 +112,7 @@
       <div class="about">
         <img
           class="image-profile"
-          src="./img/fotoperfil2.jpg"
+          src="./img/fotoperfil2-min.jpg"
           alt="foto_perfil"
         />
         <div class="about-info">
@@ -119,7 +121,7 @@
           <p class="p1">
             I'm Guido Juliano and I'm 28 years old, I'm living in Resistencia,
             Chaco. I'm studing Information Systems Engineering in UTN and at
-            this moment working in the Ministry of Education as a Full Stack
+            this moment working in the Ministry of Education as Full Stack
             Developer.
           </p>
           <p class="p2">
@@ -257,7 +259,7 @@
       ScrollReveal().reveal(".header");
       ScrollReveal().reveal(".info-content", { delay: 500 });
       ScrollReveal().reveal(".logo", { delay: 1000 });
-      ScrollReveal().reveal(".image-profile");
+      ScrollReveal().reveal(".image-profile", { delay: 100 });
       ScrollReveal().reveal(".about-me", { delay: 500 });
       ScrollReveal().reveal(".p1", { delay: 1000 });
       ScrollReveal().reveal(".p2", { delay: 1500 });
