actualizacion de cv y cambio de about me

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <h1>I'm Guido <span>Juliano</span></h1>
             <p>Web developer, electronic technical and student.</p>
             <a
-              href="https://drive.google.com/file/d/1mEF542Q2lMyFx2yFqrm50wuOxQ95wKP5/view?usp=sharing"
+              href="https://drive.google.com/file/d/1SYf1gFTbw0W2uhM9KZYfvaJMgQA5qbjg/view?usp=sharing"
               target="_blank"
             >
               <button class="download-cv">View Resumee</button>
@@ -115,7 +115,7 @@
       <div class="about">
         <img
           class="image-profile"
-          src="./img/fotoperfil2-min.jpg"
+          src="./img/profile.png"
           alt="foto_perfil"
           loading="lazy"
         />
@@ -123,16 +123,21 @@
           <h2 class="about-me">About me</h2>
           <div class="divider"></div>
           <p class="p1">
-            I'm Guido Juliano and I'm 28 years old, I'm living in Resistencia,
-            Chaco. I'm studing Information Systems Engineering in UTN and at
-            this moment working in the Ministry of Education as Full Stack
-            Developer.
+            Hey there! I'm Guido Juliano, a self-taught Web Developer based in
+            Resistencia, Chaco, Argentina. I have a passion for crafting dynamic
+            web applications using React JS and TypeScript. With a strong
+            foundation in Python, HTML, CSS, and JavaScript, I quickly dive into
+            new technologies and frameworks. I embrace challenges and love
+            expanding my skillset to stay ahead in the ever-evolving field of
+            web development.
           </p>
           <p class="p2">
-            Now we are working with Python, HTML, CSS, JavaScript, Django,
-            PostgreSQL, Docker containers, repositories and versioned whit
-            Github. I consider myself a person who adapts very quickly in the
-            workplace, I am self-taught and I like to work in a team.
+            I thrive in fast-paced, collaborative environments and enjoy working
+            alongside talented teams. My ability to adapt swiftly and
+            continuously learn empowers me to tackle diverse projects
+            effectively. If you're seeking a motivated developer who can hit the
+            ground running, let's connect and explore how I can contribute to
+            your team or project!
           </p>
         </div>
       </div>
