correccion de botones

--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
                 <i class="fa-brands fa-github"></i>
               </a>
               <a
+                class="button"
                 href="https://www.youtube.com/watch?v=oHKKnqnNNqk&t=11s"
                 target="_blank"
               >
@@ -198,9 +199,13 @@
               </a>
             </div>
             <div class="project-details-content">
-              <button class="project-details download-cv">
+              <a
+                class="project-details download-cv"
+                href="https://github.com/guidojuliano/RepositorioEcoBlog"
+                target="_blank"
+              >
                 Project Details
-              </button>
+              </a>
             </div>
           </div>
           <div class="card">
@@ -224,13 +229,13 @@
               </a>
             </div>
             <div class="project-details-content">
-              <button
+              <a
                 class="project-details download-cv"
                 href="https://github.com/guidojuliano/tetris-react"
                 target="_blank"
               >
                 Project Details
-              </button>
+              </a>
             </div>
           </div>
           <div class="card">
@@ -254,13 +259,13 @@
               </a>
             </div>
             <div class="project-details-content">
-              <button
+              <a
                 href="https://github.com/guidojuliano/spa-artworks-nbch/blob/master/README.md"
                 class="project-details download-cv"
                 target="_blank"
               >
                 Project Details
-              </button>
+              </a>
             </div>
           </div>
         </div>
